chore: analytics sort
